mrt_ws_new/log/build_2024-01-04_21-07-19/rishith_assn_2/stdout_stderr.log
running egg_info
writing ../../build/rishith_assn_2/rishith_assn_2.egg-info/PKG-INFO
writing dependency_links to ../../build/rishith_assn_2/rishith_assn_2.egg-info/dependency_links.txt
writing entry points to ../../build/rishith_assn_2/rishith_assn_2.egg-info/entry_points.txt
writing requirements to ../../build/rishith_assn_2/rishith_assn_2.egg-info/requires.txt
writing top-level names to ../../build/rishith_assn_2/rishith_assn_2.egg-info/top_level.txt
reading manifest file '../../build/rishith_assn_2/rishith_assn_2.egg-info/SOURCES.txt'
writing manifest file '../../build/rishith_assn_2/rishith_assn_2.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/setup.py to setup.cpython-310.pyc
  File "/home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2/setup.py", line 17
    ],
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 16

running install_data
copying package.xml -> /home/rishith/mrt_ws_new/install/rishith_assn_2/share/rishith_assn_2
running install_egg_info
removing '/home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/rishith_assn_2/rishith_assn_2.egg-info to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/python3.10/site-packages/rishith_assn_2-0.0.0-py3.10.egg-info
running install_scripts
Installing d_rover1 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover2 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover3 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
Installing d_rover4 script to /home/rishith/mrt_ws_new/install/rishith_assn_2/lib/rishith_assn_2
writing list of installed files to '/home/rishith/mrt_ws_new/build/rishith_assn_2/install.log'
